--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,12 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@shared/*": ["./shared/*"],
+      "@layout/*": ["./layout/*"],
+      "@assets/*": ["./public/assets/*"],
+      "@ui/*": ["./ui/*"],
+      "@styles/*": ["./styles/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
