--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "gh-pages -b uat -d build"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -14,6 +15,7 @@
     "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.15.4",
     "aos": "^2.3.4",
+    "gh-pages": "^6.1.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
