--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -23,34 +19,14 @@
       }
     ],
     "paths": {
-      "@/*": [
-        "./*"
-      ],
-      "@shared/*": [
-        "./shared/*"
-      ],
-      "@layout/*": [
-        "./layout/*"
-      ],
-      "@assets/*": [
-        "./public/assets/*"
-      ],
-      "@ui/*": [
-        "./ui/*"
-      ],
-      "@styles/*": [
-        "./styles/*"
-      ]
+      "@app/*": ["./app/*"],
+      "@shared/*": ["./shared/*"],
+      "@layout/*": ["./layout/*"],
+      "@assets/*": ["./public/assets/*"],
+      "@ui/*": ["./ui/*"],
+      "@styles/*": ["./styles/*"]
     }
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts",
-    "build/types/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "build/types/**/*.ts"],
+  "exclude": ["node_modules"]
 }
