--- a/package.json
+++ b/package.json
@@ -10,16 +10,22 @@
     "deploy": "gh-pages -b uat -d build"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.11.2",
+    "@cloudinary/url-gen": "^1.16.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.15.4",
     "aos": "^2.3.4",
+    "cloudinary-react": "^1.8.1",
     "gh-pages": "^6.1.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.5.3",
+    "react-responsive": "^9.0.2",
     "sass": "^1.69.7",
+    "swiper": "^11.0.5",
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
