--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "aos": "^2.3.4",
     "cloudinary-react": "^1.8.1",
     "gh-pages": "^6.1.1",
+    "lodash": "^4.17.21",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
